@@ -26,7 +26,7 @@ class User extends MY_Controller
         $data['profile_info'] = $this->User_model->get_profile_information($this->session->userdata('user_id'));
         $data['country_list'] = $this->Country_model->country_list();
         $data['pictures'] = $this->Picture_model->find_by_uploader($this->session->userdata('user_id'), 4);
-        $data['videos'] = $this->Video_model->find_by_uploader($this->session->userdata('user_id'), 4);
+        $data['videos'] = $this->Video_model->get_where('uploader', $this->session->userdata('user_id'), 4);
         $data['bucket_list'] = $this->Bucket_m->get_where('user_id', $this->session->userdata('user_id'), 10);
         $data['users_online'] = $this->Ion_auth_model->users_online();
         $data['user_meta'] = $this->Usermeta_model->get($this->session->userdata('user_id'));
@@ -354,7 +354,7 @@ class User extends MY_Controller
             $data['banner'] = $this->Banner_m->get_where('uploader', $this->session->userdata('user_id'), 1);
             $data['profile_info'] = $this->User_model->get_profile_information($user_id);
             $data['pictures'] = $this->Picture_model->find_by_uploader($user_id, 4);
-            $data['videos'] = $this->Video_model->find_by_uploader($user_id, 4);
+            $data['videos'] = $this->Video_model->get_where('uploader', $user_id, 4);
             $data['users_online'] = $this->Ion_auth_model->users_online();
             $data['num_uploaded_stories'] = $this->Story_model->count_where('author', $user_id);
             $this->load->view($this->_layout, $data);
